# Tpaste-Project

client/: tpaste.bat
client/src/: main.rs  token.txt
server/: Cargo.toml  users.db
server/pastes/: bursuc.txt  eduarda.txt  test.txt
server/src/: main.rs
web_server/: Cargo.toml
web_server/src/: main.rs
