[package]
name = "server"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.30.0", features = ["bundled"] }
jsonwebtoken = "9.2"
serde = { version = "1", features = ["derive"] }
chrono = "0.4.31"
rand = "0.8.5"

